# ProjectHomeWork

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: lint.yml
external_api/: currency_converter.py
src/: counting_operations.py  data_loader.py  decorators.py  generators.py  masks.py  processing.py  utils.py  utils_search.py  widget.py
tests/: conftest.py  print_test_processing.py  test_currency_converter.py  test_data_loader.py  test_decorators.py  test_financial.py  test_generators.py  test_masks.py  test_module.py  test_processing.py  test_widget.py
utils/: financial.py
