[tool.poetry]
name = "pythonproject9-1lesson"
version = "0.1.0"
description = ""
authors = ["Konstantin Kanin <canin.kostya@gmail.com>"]
readme = "README.md"
packages = [{include = "pythonproject9"}]

[tool.poetry.dependencies]
python = "^3.14"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core", "setuptools>=45", "wheel"]
build-backend = ["poetry.core.masonry.api", "setuptools.build_meta"]

[project]
name = "python-project"
version = "0.1.0"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "mypy (>=1.19.0,<2.0.0)"
]

[tool.black]
line-length = 119
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312', 'py313', 'py314']
include = '\.py$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | migrations
  | dist
  | build
)/
'''

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3  # Hanging indents
force_sort_within_sections = true
combine_as_imports = false
skip = [
    ".venv",
    "venv",
    ".git",
    "__pycache__",
    "migrations",
    "dist",
    "build",
]
known_first_party = ["src"]

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = [
    "venv",
    ".venv",
    ".git",
    "__pycache__",
    "migrations",
    "dist",
    "build",
]

[tool.setuptools.packages.find]
where = ["src"]
